# python-project-50

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
gendiff/: gendiff.py
gendiff/config/: json_parser.py  yaml_parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
