[project]
authors = [
    {name = "Coverfog", email = "hain.heither@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "A small program that shows the difference between two files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
